feat: metrics / results

--- a/src/experiments_notebook.ipynb
+++ b/src/experiments_notebook.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,9 @@
      "output_type": "stream",
      "text": [
       "2025-03-06 22:55:49,097 [INFO] evaluation - Generating results...\n",
-      "Generating results...:   6%|▋         | 64/1000 [05:07<1:16:50,  4.93s/it]"
+      "Generating results...: 100%|██████████| 1000/1000 [1:19:54<00:00,  4.79s/it]\n",
+      "2025-03-07 00:15:43,448 [INFO] evaluation - Generated 1000 results.\n",
+      "2025-03-07 00:15:43,493 [INFO] evaluation - Results saved to C:\\Users\\melis\\Desktop\\Projects\\python_projects\\thesis\\advanced_graph_rag\\data\\results\\evaluation_results_20250307_001543.json\n"
      ]
     }
    ],
@@ -140,17 +142,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-06 22:04:24,015 [INFO] evaluation - Computing metrics...\n",
-      "2025-03-06 22:04:24,020 [INFO] evaluation - Accuracy: 0.5000\n",
-      "2025-03-06 22:04:24,020 [INFO] evaluation - Precision: 0.5000\n",
-      "2025-03-06 22:04:24,022 [INFO] evaluation - Recall: 1.0000\n",
-      "2025-03-06 22:04:24,023 [INFO] evaluation - F1: 0.6667\n"
+      "2025-03-07 00:15:50,392 [INFO] evaluation - Computing metrics...\n",
+      "2025-03-07 00:15:50,508 [INFO] evaluation - Accuracy: 0.6780\n",
+      "2025-03-07 00:15:50,511 [INFO] evaluation - Precision: 0.6423\n",
+      "2025-03-07 00:15:50,512 [INFO] evaluation - Recall: 0.9402\n",
+      "2025-03-07 00:15:50,514 [INFO] evaluation - F1: 0.7632\n",
+      "2025-03-07 00:15:50,517 [INFO] evaluation - Results saved to C:\\Users\\melis\\Desktop\\Projects\\python_projects\\thesis\\advanced_graph_rag\\data\\metrics\\answering_metrics_20250307_001550.json\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.5, 'precision': 0.5, 'recall': 1.0, 'f1': 0.6666666666666666}"
+       "{'accuracy': 0.678,\n",
+       " 'precision': 0.6423267326732673,\n",
+       " 'recall': 0.9402173913043478,\n",
+       " 'f1': 0.763235294117647}"
       ]
      },
      "execution_count": 5,
@@ -160,26 +166,6 @@
    ],
    "source": [
     "evaluator.compute_metrics()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Hey there! How can I help you today?', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, id='run-7c4fea5e-cdb8-4395-9fd1-6f27607d40e4-0', usage_metadata={'input_tokens': 1, 'output_tokens': 11, 'total_tokens': 12, 'input_token_details': {'cache_read': 0}})"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "llm.invoke(\"hey\")"
    ]
   },
   {
