refactor: chat model class

--- a/src/experiments_notebook.ipynb
+++ b/src/experiments_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "from knowledge_graph.crud import GraphCrud\n",
     "from configs.config import ConfigEnv\n",
     "from knowledge_graph.connection import Neo4jConnection\n",
-    "from llms.llm import LLM\n",
+    "from llms.llm import ChatModel\n",
     "from retrieval.tools.vector_search_tool import VectorSearchTool\n"
    ]
   },
@@ -38,22 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-06 22:55:14,407 [DEBUG] embedding_model - CUDA is available, using GPU\n",
-      "2025-03-06 22:55:33,462 [DEBUG] embedding_model - Embedding model initialized: neuml/pubmedbert-base-embeddings\n"
+      "2025-03-07 00:41:29,584 [DEBUG] embedding_model - CUDA is available, using GPU\n",
+      "2025-03-07 00:41:51,511 [DEBUG] embedding_model - Embedding model initialized: neuml/pubmedbert-base-embeddings\n"
      ]
     }
    ],
    "source": [
     "# models\n",
     "embedding_model = EmbeddingModel()\n",
-    "llm = LLM.initialize_model(provider=\"google\", model_name=\"gemini-2.0-flash\")"
+    "chat_model = ChatModel(provider=\"google\", model_name=\"gemini-2.0-pro-exp-02-05\")\n",
+    "llm = chat_model.llm"
    ]
   },
   {
@@ -167,13 +168,6 @@
    "source": [
     "evaluator.compute_metrics()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
