--- a/src/experiments_notebook.ipynb
+++ b/src/experiments_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "from llms.llm import ChatModel\n",
     "from retrieval.tools.vector_search_tool import VectorSearchTool\n",
     "from answer_pip_executor import AnswerPipExecutor\n",
-    "from evaluation.evaluation import Evaluator"
+    "from evaluation.evaluation import Evaluator\n",
+    "from evaluation.retrieval_evaluation import compute_scores_for_single_qa"
    ]
   },
   {
@@ -34,9 +35,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-01 00:30:29,785 [DEBUG] embedding_model - CUDA is available, using GPU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-01 00:30:50,464 [DEBUG] embedding_model - Embedding model initialized: neuml/pubmedbert-base-embeddings\n",
+      "2025-04-01 00:30:50,510 [DEBUG] llm - Initialized model gemini-2.0-flash-lite\n",
+      "2025-04-01 00:30:54,645 [DEBUG] connection - Connection successful!\n"
+     ]
+    }
+   ],
    "source": [
     "# models\n",
     "embedding_model = EmbeddingModel()\n",
@@ -56,15 +74,75 @@
     "    llm=llm,\n",
     "    embedding_model=embedding_model,\n",
     "    neo4j_connection=neo4j_connection,\n",
-    "    return_direct=False,\n",
+    "    return_direct=True,\n",
     "    answer_type=answer_type,\n",
     ")\n",
     "\n",
     "retriever_model_name = vector_search_tool.get_model_name()\n",
     "\n",
     "# data\n",
-    "data = read_json_file(file_path=os.path.join(ConfigPath.RAW_DATA_DIR, \"test_pqa.json\"))  \n",
-    "print(f\"Data length: {len(data)}\")"
+    "# data = read_json_file(file_path=os.path.join(ConfigPath.RAW_DATA_DIR, \"test_pqa.json\"))  \n",
+    "# print(f\"Data length: {len(data)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['23641065', '22055460']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = vector_search_tool.invoke(\"Is STAT3 transcription factor regulated by mTORC1?\")\n",
+    "retrieved_pmdis = [element['pmid'] for element in results]\n",
+    "ground_truth_pmids = [\"22055460\", \"23641065\", \"26026060\", \"24302004\", \"24931163\" ]\n",
+    "retrieved_pmdis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieved (k=2): ['23641065', '22055460']\n",
+      "Ground Truth: ['22055460', '23641065', '26026060', '24302004', '24931163']\n",
+      "------------------------------\n",
+      "Precision: 1.0000\n",
+      "Recall:    0.4000\n",
+      "F1-Score:  0.5714\n",
+      "Hit Rate:  1.0000\n",
+      "RR:        1.0000\n",
+      "AP:        0.4000\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'retrieved' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcompute_scores_for_single_qa\u001b[49m\u001b[43m(\u001b[49m\u001b[43mretrieved_ids\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mretrieved_pmdis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mground_truth_ids\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mground_truth_pmids\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\melis\\Desktop\\Projects\\python_projects\\thesis\\advanced_graph_rag\\src\\evaluation\\retrieval_evaluation.py:320\u001b[0m, in \u001b[0;36mcompute_scores_for_single_qa\u001b[1;34m(retrieved_ids, ground_truth_ids)\u001b[0m\n\u001b[0;32m    318\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRR:        \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrr_score\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    319\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAP:        \u001b[39m\u001b[38;5;132;01m{\u001b[39;00map_score\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 320\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNDCG@\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(retrieved)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:    \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mndcg_score\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    322\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m30\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'retrieved' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "compute_scores_for_single_qa(retrieved_ids=retrieved_pmdis, ground_truth_ids=ground_truth_pmids)"
    ]
   },
   {
