feat: evaluation of retrieved chunks added

--- a/src/experiments_notebook.ipynb
+++ b/src/experiments_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,9 @@
     "from configs.config import ConfigEnv\n",
     "from knowledge_graph.connection import Neo4jConnection\n",
     "from llms.llm import ChatModel\n",
-    "from retrieval.tools.vector_search_tool import VectorSearchTool\n",
-    "from answer_pip_executor import AnswerPipExecutor\n",
-    "from evaluation.evaluation import Evaluator\n",
+    "from retrieval.tools.vector_search_tool import VectorSimilaritySearchTool\n",
     "from data_collection.reader import BioASQDataReader\n",
-    "from evaluation.retrieval_evaluation import run_retrieval_evaluation\n",
+    "from evaluation.retrieval_evaluation import run_evaluation_on_retrieved_chunks\n",
     "from tqdm import tqdm"
    ]
   },
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +71,7 @@
     "                 database=ConfigEnv.NEO4J_DB)\n",
     "\n",
     "# retriever\n",
-    "vector_search_tool = VectorSearchTool(\n",
+    "vector_search_tool = VectorSimilaritySearchTool(\n",
     "    llm=llm,\n",
     "    embedding_model=embedding_model,\n",
     "    neo4j_connection=neo4j_connection,\n",
@@ -192,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +204,7 @@
    "source": [
     "\n",
     "\n",
-    "metrics, new_evaluator = run_retrieval_evaluation(\n",
+    "metrics, new_evaluator = run_evaluation_on_retrieved_chunks(\n",
     "    retrieval_results=results,\n",
     "    benchmark_data=data\n",
     ")\n",
@@ -233,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answer_pip_executor = AnswerPipExecutor(source_data=data)\n",
+    "answer_pip_executor = RetrieverExecutor(source_qa_data=data)\n",
     "results = answer_pip_executor.generate_answers(retriever=vector_search_tool, model_name=retriever_model_name, answer_type=answer_type)"
    ]
   },
